--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/observe-dom": "^2.3.0",
+    "@better-scroll/pull-up": "^2.0.0-beta.10",
     "axios": "^0.21.1",
     "better-scroll": "^2.3.0",
     "core-js": "^3.6.5",
