--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.6",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
